test/io/ferguson/asserteof.good
Past First Check
asserteof.chpl:28: error: assert failed - Not at EOF with path "asserteof.test.nums" offset 3
